# madsoft-test

./: .env.minio.example  .env.pg.example  .env.test  .gitignore  README.md  docker-compose.yml
app_service/: .env.app.example  .env.test  Dockerfile  alembic.ini  main.py  pyproject.toml
app_service/alembic/: env.py
app_service/alembic/versions/: 2024_07_16_1700-1034d261c248_init.py  2024_07_16_1752-a11b3563f69c_create_meme_model.py
app_service/api_v1/: __init__.py
app_service/api_v1/memes/: crud.py  schemas.py  views.py
app_service/core/: settings.py
app_service/database/: __init__.py  db_manager.py
app_service/database/models/: base.py  meme.py
app_service/s3connect/: __init__.py  s3config.py
app_service/tests/: conftest.py  test_api.py
app_service/utils/: __init__.py  utils.py
media_service/: .dockerignore  .env.app.example  Dockerfile  main.py  pyproject.toml
media_service/api_v1/: __init__.py
media_service/api_v1/media/: views.py
media_service/core/: __init__.py  settings.py
media_service/s3_settings/: __init__.py  s3_config.py
